<resources>
    <string name="app_name">RpfCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mathematical_formula">数式：</string>
    <string name="calc_result">計算結果：</string>
    <string name="rp_formula">逆ポーランド記法：</string>
    <string name="calculation_log">計算過程：</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="parenthesis_begin">(</string>
    <string name="parenthesis_end">)</string>
    <string name="back">←</string>
    <string name="clear">C</string>
</resources>
